Improved setter for time on MotionSeriesObject
Fixed: In "Friction" tab, changing mass resets the friction coefficients to default values. All sliders should be independent of each other.
Improved interface for adding reset listeners to the MotionSeriesModel
Fixed: The right wall becomes detached from the ramp when you change the angle (either by dragging the ramp or using the control panel slider)
Refactored MotionSeriesObject to use observable PositionMapper instance
Refactored ramp segments from array to named declarations for left and right segment
Fixed: When sim is paused, dragging the "object position" slider causes incorrect normal force to point straight up.
Fixed: In "Friction Tab", remove the Force Vectors radio buttons and replace with just checkbox for vectors as in 1st tab.
Fixed: "Force Vectors" checkbox is buggy--the vectors only appear to listen to the box state when the object moves.
Moved the ramp angle readout to the right so that it is not directly under "meters" text, and beyond the Applied Force text box so that these don't get confused.
# 1.03.78 (43921) Sep 9, 2010
Fixed: In the game modes, the house is floating
Fixed: Return object button doesn't work after launching an object off the ramp and crashing it
# 1.03.77 (43917) Sep 9, 2010
Removed unused images
Fixed odd layout of Friction control panel
Added a sound on/off control
Fixed: gravity force slider is broken
Added a friction tab to Ramp:Forces and Motion
# 1.03.76 (43868) Sep 8, 2010
Fixed: When paused and changing the angle of the ramp, vectors do not update
Fixed: FBD vector arrows don't originate at the origin, especially on resize of the FBD dialog
Fixed: Applied force vector doesn't update when the sim is paused
Changed to idiomatic scala setter from javabean style setter in Vector2DModel
Refactored MotionSeriesObject to use MutableDouble instead of immutable State
Fixed: vectors are incorrect on initialization
Refactored MotionSeriesObject model startup sequence